--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <title>День рождения - лучший день на свете</title>
 		
     </head>
-	<body background="http://photoshop4all.ru/img/kak_v_fotoshope_sdelat_krasiviy_fon.jpg">
+	<body background="https://myucoz.files.wordpress.com/2014/03/pink-pattern-5.jpg?w=700">
 									<h1 align=center><font color="GreenYellow"><b>День рождения - лучший день на свете</b></font></h1								
 	<h4 align=center><font color="MediumVioletRed">Дорогая мамочка! Эта страничка предназначается именно для тебя!</font></h4>
 	                                   <h2 align=center><font color="DarkGreen"><i>День рождения это -</font></i></h2>
