--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <title>День рождения - лучший день на свете</title>
 		
     </head>
-	<body background="https://myucoz.files.wordpress.com/2014/03/pink-pattern-5.jpg?w=700">
+	<body background="http://s1.oboiki.net/uploads/images/previews/2010/02/4805ffe2e9d24fa4d8285c9c8cf5e577/raduga-oboi-abstraktnye_550x340.png">
 									<h1 align=center><font color="GreenYellow"><b>День рождения - лучший день на свете</b></font></h1								
 	<h4 align=center><font color="MediumVioletRed">Дорогая мамочка! Эта страничка предназначается именно для тебя!</font></h4>
 	                                   <h2 align=center><font color="DarkGreen"><i>День рождения это -</font></i></h2>
