--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <title>День рождения - лучший день на свете</title>
 		
     </head>
-	<body background="https://avatars.mds.yandex.net/get-pdb/27625/7b4fa549-bd26-4f7d-8bab-0a617784621d/s1200">
+	<body background="http://img0.liveinternet.ru/images/foto/b/1/apps/1/227/1227820_baby_toys.jpg">
 									<h1 align=center><font color="GreenYellow"><b>День рождения - лучший день на свете</b></font></h1								
 	<h4 align=center><font color="MediumVioletRed">Дорогая мамочка! Эта страничка предназначается именно для тебя!</font></h4>
 	                                   <h2 align=center><font color="DarkGreen"><i>День рождения это -</font></i></h2>
