--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <title>День рождения - лучший день на свете</title>
 		
     </head>
-	<body background="http://img0.liveinternet.ru/images/foto/b/1/apps/1/227/1227820_baby_toys.jpg">
+	<body background="https://images.clipartlogo.com/files/istock/previews/8456/84563321-vector-seamless-childish-pattern-with-stars-grunge-style.jpg">
 									<h1 align=center><font color="GreenYellow"><b>День рождения - лучший день на свете</b></font></h1								
 	<h4 align=center><font color="MediumVioletRed">Дорогая мамочка! Эта страничка предназначается именно для тебя!</font></h4>
 	                                   <h2 align=center><font color="DarkGreen"><i>День рождения это -</font></i></h2>
