--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 	<body background="https://images.clipartlogo.com/files/istock/previews/8456/84563321-vector-seamless-childish-pattern-with-stars-grunge-style.jpg">
 									<h1 align=center><font color="GreenYellow"><b>День рождения - лучший день на свете</b></font></h1								
-	<h4 align=center><font color="MediumVioletRed">Дорогая мамочка! Эта страничка предназначается именно для тебя!</font></h4>
+	<h4 align=center><font color="Indigo">Дорогая мамочка! Эта страничка предназначается именно для тебя!</font></h4>
 	                                   <h2 align=center><font color="DarkGreen"><i>День рождения это -</font></i></h2>
 	<p><font color="Red">День рождения, как это прекрасно!</font></p> <p><font color="OrangeRed">Поздравления и подарки, поцелуи обнимашки!</font></p>
 	<p><font color="Gold">Как прекрасно, родиться в этом свете, чтоб принять все подарки эти!</p></font> <p><font color="Green">Ну конечно, это все не главное,
